codepkg/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Caregiver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Patient&apos;s caregiver</description>
        <label>Caregiver</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Caregiver)</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DEA__c</fullName>
        <label>DEA #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diagnosis__c</fullName>
        <label>Diagnosis</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Hispanic/Latino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Hispanic/Latino</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <label>Group Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_2__c</fullName>
        <label>Mailing Address 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicaid_ID__c</fullName>
        <label>Medicaid ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicare_ID__c</fullName>
        <label>Medicare ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicare_Part_A__c</fullName>
        <label>Medicare Part A</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medicare_Part_B__c</fullName>
        <label>Medicare Part B</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MiddleInitial__c</fullName>
        <label>MiddleInitial</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Number__c</fullName>
        <description>Redundant field - needed for data capture form.</description>
        <label>NPI Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Office Staff that is pretend</description>
        <label>Office Staff</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Office Staff</relationshipLabel>
        <relationshipName>Contacts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>HMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Policy_ID__c</fullName>
        <label>Policy ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <picklist>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Indian or Alaskan Native</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black or African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <inlineHelpText>Medical specialty</inlineHelpText>
        <label>Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Abdominal Radiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addiction Psychiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adolescent Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Reconstructive Orthopaedics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Heart Failure &amp; Transplant Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allergy &amp; Immunology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anesthesiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biochemical Genetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiothoracic Radiology Radiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiovascular Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Pathology Pathology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child &amp; Adolescent Psychiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Neurology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical &amp; Laboratory Immunology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Cardiac Electrophysiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Neurophysiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colon &amp; Rectal Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congenital Cardiac Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craniofacial Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Care Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cytopathology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatopathology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endocrinology, Diabetes &amp; Metabolism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endovascular Surgical Neuroradiology </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Medicine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_License__c</fullName>
        <label>State License #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Identification_Number__c</fullName>
        <label>Tax Identification Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zDestination__c</fullName>
        <formula>IF( Fax != &quot;&quot;, Fax , Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zDestination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zEmailPIN__c</fullName>
        <description>Password for opening secure email attachments</description>
        <formula>TEXT(YEAR(  Birthdate  )) &amp;  FirstName</formula>
        <label>zEmailPIN</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Caregiver</fullName>
        <active>true</active>
        <description>This is a record type for the Support at home</description>
        <label>Caregiver</label>
    </recordTypes>
    <recordTypes>
        <fullName>Office_Staff</fullName>
        <active>true</active>
        <description>This is a record type for Office Staff</description>
        <label>Office Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>Patient</fullName>
        <active>true</active>
        <description>This is a record type for a Patient (Contact)</description>
        <label>Patient</label>
    </recordTypes>
    <recordTypes>
        <fullName>Provider</fullName>
        <active>true</active>
        <description>This is a record type for a Provider (Contact)</description>
        <label>Provider</label>
    </recordTypes>
</CustomObject>